# opengl-surroundview

./: .gitignore  CMakeLists.txt  README.md  benchmark_20250717_101643.csv  build.bat  camera_extrinsics.csv  camera_intrinsics.yml  profiler.py  profiler_requirements.txt  run_profiler.bat
include/: Camera.h  ImageProcessor.h  Mesh.h  Model.h  Renderer3D.h  Shader.h
shaders/: fragment.glsl
src/: Camera.cpp  ImageProcessor.cpp  Mesh.cpp  Model.cpp  Renderer3D.cpp  Shader.cpp  main.cpp
